--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="loading">
     </div>
+
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1595331467338-0184f06c40e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1456&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1595331467338-0184f06c40e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1456&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1595331467338-0184f06c40e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1456&q=80" alt="">
+    </div>
+
     <!-- script -->
     <script src="script.js"></script>
 </body>
